# fl-ai-ides

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.specstory/history/: 2025-08-22_18-45Z-create-a-project-for-tracking-ai-ides.md
docs/: AI_IDEs.md
src/: cli.py
src/tests/: test_cli_smoke.py
